<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notenspiegel</string>
    <string name="title_options">Einstellungen</string>
    <string name="title_grade">Note</string>
    <string name="title_average">Notendurchschnitt</string>
    <string name="search_hint">Noten durchsuchen</string>
    <string name="search_result">Suchergebnis</string>
    <string name="refresh">Aktualisieren</string>
    <string name="search">Suchen</string>
    <string name="username">Matrikelnummer</string>
    <string name="password">Passwort</string>
    <string name="university">Hochschule</string>

    <string-array name="listConnectorNames">
        <item>HTW Dresden</item>
        <item>TU Dresden (beta)</item>
    </string-array>
    <string-array name="listConnectorValues">
        <item>htwdd</item>
        <item>tudd</item>
    </string-array>

    <string name="username_summary">Matrikelnummer eingeben</string>
    <string name="password_summary">Passwort eingeben</string>
    <string name="btn_ok">Weiter</string>
    <string name="accept_untrusted_certificates">Alle Zertifikate zulassen</string>
    <string name="accept_untrusted_certificates_summaryOn">Vertraut auch unsicheren Zertifikaten\nz.B. HTW Dresden</string>
    <string name="accept_untrusted_certificates_summaryOff">Vertraut nur sicheren Zertifikaten</string>
    <string name="legal_information">Rechtliche Hinweise</string>
    <string name="legal_information_summary">Autor: André Nitzschke, Version: %s\nDies ist keine offizielle Anwendung der Hochschule für Technik und Wirtschaft Dresden.</string>
    <string name="details_nr">Prüfungsnummer:</string>
    <string name="details_text">Prüfungstext:</string>
    <string name="details_sem">Semester:</string>
    <string name="details_grade">Note:</string>
    <string name="details_status">Status:</string>
    <string name="details_credits">Credits:</string>
    <string name="details_ects">ECTS:</string>
    <string name="details_notation">Vermerk:</string>
    <string name="details_try">Versuch:</string>
    <string name="details_date">Prüfungstermin:</string>
    <string name="delete">Löschen</string>
    <string name="delete_all">Alle Löschen</string>
    <string name="notification_new_grade">Neue Note</string>
    <string name="notification_new_grades">Neue Noten</string>
    <string name="ssl_error">Um die Noten der %s abrufen zu können, muss \'Alle Zertifikate zulassen\' aktiviert sein.</string>
    <string name="server_error">Server nicht errreichbar</string>
    <string name="dialog_average_title">Notendurchschnitt</string>
    <string name="average_count_all">Gesamtanzahl Noten:</string>
    <string name="average_count_credits">Anzahl Noten (Credits > 0):</string>
    <string name="average_sum_credits">Erreichte Credits:</string>
    <string name="average_weighted">Gewichteter Durchschnitt:</string>
    <string name="average_without_guarantee">Alle Berechnungen erfolgen ohne Gewähr!</string>
    <string name="successfully_synced">Erfolgreich synchronisiert</string>
    <string name="auto_sync">Auto-Synchronisation</string>
    <string name="last_sync">letzte Aktualisierung</string>
    <string name="sync_interval">Intervall</string>

    <string-array name="listIntervalNames">
        <item>7 Tage</item>
        <item>3 Tage</item>
        <item>24 Stunden</item>
        <item>6 Stunden</item>
        <item>1 Stunde</item>
        <item>30 Minuten</item>
        <item>Aus</item>
    </string-array>
    <string-array name="listIntervalValues">
        <item>604800000</item>
        <item>259200000</item>
        <item>86400000</item>
        <item>21600000</item>
        <item>3600000</item>
        <item>1800000</item>
        <item>0</item>
    </string-array>

</resources>