<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="username"
        android:summary="@string/username_summary"
        android:title="@string/username" />
    <EditTextPreference
        android:key="password"
        android:password="true"
        android:summary="@string/password_summary"
        android:title="@string/password" />

    <ListPreference
        android:defaultValue="htwdd"
        android:entries="@array/listConnectorNames"
        android:entryValues="@array/listConnectorValues"
        android:key="listUniversities"
        android:summary="@string/university_summary"
        android:title="@string/university" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="acceptUntrustedCerts"
        android:summaryOff="@string/accept_untrusted_certificates_summaryOff"
        android:summaryOn="@string/accept_untrusted_certificates_summaryOn"
        android:title="@string/accept_untrusted_certificates" />

    <Preference
        android:enabled="false"
        android:key="legalDisclaimer"
        android:summary="@string/legal_information_summary"
        android:title="@string/legal_information" />

</PreferenceScreen>