<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@id/menu_preferences"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/title_options"/>
    <item
        android:id="@id/menu_average"
        android:icon="@drawable/ic_menu_average"
        android:title="@string/title_average"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/search"/>
    <item
        android:id="@id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/refresh"/>

</menu>