<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textDialogCountAllTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/average_count_all"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textDialogCountCreditsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textDialogCountAllTxt"
        android:text="@string/average_count_credits"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textDialogSumCreditsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textDialogCountCreditsTxt"
        android:text="@string/average_sum_credits"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textDialogAverageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textDialogSumCreditsTxt"
        android:text="@string/average_weighted"
        android:textColor="#FFF" />

</RelativeLayout>